// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-role-selector - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps users find the right Azure RBAC role for an identity with least privilege access, then generate CLI commands and Bicep code to assign it.
USE FOR: "what role should I assign", "least privilege role", "RBAC role for", "role to read blobs", "role for managed identity", "custom role definition", "assign role to identity".
DO NOT USE FOR: creating managed identities (use azure-security), general security hardening (use azure-security-hardening), networking permissions (use azure-networking).
",
  "extractedKeywords": [
    "access",
    "assign",
    "azure",
    "azure-networking",
    "azure-security",
    "azure-security-hardening",
    "bicep",
    "blobs",
    "cli",
    "code",
    "commands",
    "creating",
    "custom",
    "definition",
    "find",
    "general",
    "generate",
    "hardening",
    "helps",
    "identities",
    "identity",
    "least",
    "managed",
    "networking",
    "permissions",
    "privilege",
    "rbac",
    "read",
    "right",
    "role",
    "security",
    "selector",
    "should",
    "then",
    "users",
    "what",
    "with",
  ],
  "name": "azure-role-selector",
}
`;

exports[`azure-role-selector - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "assign",
  "azure",
  "azure-networking",
  "azure-security",
  "azure-security-hardening",
  "bicep",
  "blobs",
  "cli",
  "code",
  "commands",
  "creating",
  "custom",
  "definition",
  "find",
  "general",
  "generate",
  "hardening",
  "helps",
  "identities",
  "identity",
  "least",
  "managed",
  "networking",
  "permissions",
  "privilege",
  "rbac",
  "read",
  "right",
  "role",
  "security",
  "selector",
  "should",
  "then",
  "users",
  "what",
  "with",
]
`;
